--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-SECRET_KEY=change-this-secret
+USE_LOCAL_MYSQL=1
+DB_HOST=127.0.0.1
 DB_USER=covid_user
-DB_PASS=StrongPassword123
-DB_HOST=localhost
+DB_PASS=StrongPass123!
 DB_NAME=covid_beds
+
